Traduire les textes anglais en français

--- a/donnees-personnelles.html
+++ b/donnees-personnelles.html
@@ -1802,7 +1802,7 @@
       </div>
 
       <div class="footer-column">
-        <h4>Support</h4>
+        <h4>Assistance</h4>
         <a href="#faq">FAQ</a>
         <a href="#">Centre d’aide</a>
         <a href="#">État du système</a>
