--- a/index.html
+++ b/index.html
@@ -2005,7 +2005,7 @@
   <section class="below">
     <div class="container">
        <div class="pill-row">
-        <button class="pill pill-demo" type="button">Voir la Demo</button>
+        <button class="pill pill-demo" type="button">Voir la démo</button>
         <button class="cta" type="button" data-register-cta>Essai 15j gratuits</button>
         <a class="pill" href="#fonctionnalites">Voir les fonctionnalités</a>
       </div>
@@ -2342,19 +2342,19 @@
     <div class="pricing-header">
       <img src="mechas.svg" alt="" class="pricing-icon">
       <h2>Tarifs</h2>
-      <button class="pricing-toggle" type="button" aria-pressed="false" aria-label="Toggle annual pricing">
-        <span>Monthly</span>
+      <button class="pricing-toggle" type="button" aria-pressed="false" aria-label="Basculer la tarification annuelle">
+        <span>Mensuel</span>
         <span class="pricing-switch"></span>
-        <span>Annual</span>
+        <span>Annuel</span>
       </button>
     </div>
 
     <div class="pricing-grid">
       <article class="pricing-card pricing-card--rempart">
         <div class="pricing-card__icon" style="background-color: #ffd256;">
-          <img src="1.svg" alt="Start">
+          <img src="1.svg" alt="Départ">
         </div>
-        <h3>Start<span class="pricing-card__tag"></span></h3>
+        <h3>Départ<span class="pricing-card__tag"></span></h3>
         <div class="pricing-card__price">
           <span class="pricing-card__amount">Gratuit</span>
         </div>
@@ -2370,21 +2370,21 @@
           
       
         </ul>
-        <button class="pricing-card__cta" type="button" data-register-cta>Sign up</button>
+        <button class="pricing-card__cta" type="button" data-register-cta>S'inscrire</button>
       </article>
 
       <article class="pricing-card pricing-card--pieter pricing-card--featured">
         <div class="pricing-card__icon" style="background-color: #22c55e;">
-          <img src="2.svg" alt="Grow">
+          <img src="2.svg" alt="Croissance">
         </div>
-        <h3>Grow<span class="pricing-card__tag"></span></h3>
+        <h3>Croissance<span class="pricing-card__tag"></span></h3>
         <div class="pricing-card__price">
           <div class="pricing-card__line">
             <span class="pricing-card__amount" data-monthly="Rs 499" data-annual="Rs 4990">Rs 499</span>
-            <span class="pricing-card__term" data-monthly="/ month" data-annual="/ year">/ month</span>
+            <span class="pricing-card__term" data-monthly="/ mois" data-annual="/ an">/ mois</span>
           </div>
           <div class="pricing-card__line">
-            <span class="pricing-card__equivalent" data-monthly="(9,9€ / month)" data-annual="(99€ / year)">(9,9€ / month)</span>
+            <span class="pricing-card__equivalent" data-monthly="(9,9€ / mois)" data-annual="(99€ / an)">(9,9€ / mois)</span>
           </div>
         </div>
         <div class="pricing-divider"></div>
@@ -2396,21 +2396,21 @@
           <li>Rappels automatiques</li>
 
         </ul>
-        <button class="pricing-card__cta" type="button" data-register-cta>Sign up</button>
+        <button class="pricing-card__cta" type="button" data-register-cta>S'inscrire</button>
       </article>
 
       <article class="pricing-card pricing-card--morne">
         <div class="pricing-card__icon" style="background-color: #10a5e9;">
-          <img src="3.svg" alt="Scale">
+          <img src="3.svg" alt="Expansion">
         </div>
-        <h3>Scale<span class="pricing-card__tag"></span></h3>
+        <h3>Expansion<span class="pricing-card__tag"></span></h3>
         <div class="pricing-card__price">
           <div class="pricing-card__line">
             <span class="pricing-card__amount" data-monthly="Rs 999" data-annual="Rs 9990">Rs 999</span>
-            <span class="pricing-card__term" data-monthly="/ month" data-annual="/ year">/ month</span>
+            <span class="pricing-card__term" data-monthly="/ mois" data-annual="/ an">/ mois</span>
           </div>
           <div class="pricing-card__line">
-            <span class="pricing-card__equivalent" data-monthly="(19,9€ / month)" data-annual="(199€ / year)">(19,9€ / month)</span>
+            <span class="pricing-card__equivalent" data-monthly="(19,9€ / mois)" data-annual="(199€ / an)">(19,9€ / mois)</span>
           </div>
         </div>
         <div class="pricing-divider"></div>
@@ -2419,9 +2419,9 @@
 
           <li>Multi devises</li>
           <li>Emails avec PJ</li>
-          <li>API access</li>
+          <li>Accès API</li>
         </ul>
-        <button class="pricing-card__cta" type="button" data-register-cta>Sign up</button>
+        <button class="pricing-card__cta" type="button" data-register-cta>S'inscrire</button>
       </article>
     </div>
     <div class="pricing-cta">
@@ -2909,7 +2909,7 @@ animation.addEventListener('complete', () => {
       </div>
 
       <div class="footer-column">
-        <h4>Support</h4>
+        <h4>Assistance</h4>
         <a href="#faq">FAQ</a>
         <a href="#">Centre d’aide</a>
         <a href="#">État du système</a>
