--- a/intro.html
+++ b/intro.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Coming soon</title>
+  <title>Bientôt disponible</title>
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <style>
     :root{
@@ -57,11 +57,11 @@
   </style>
 </head>
 <body>
-  <main class="coming-soon" aria-label="Coming soon">
+  <main class="coming-soon" aria-label="Bientôt disponible">
     <div class="logo-animation" data-animation="2.json" role="img" aria-label="Logo"></div>
-    <h1>Coming soon</h1>
+    <h1>Bientôt disponible</h1>
     <div class="screens-frame">
-      <img class="screens-image" src="screens.png" alt="Screens preview">
+      <img class="screens-image" src="screens.png" alt="Aperçu des écrans">
     </div>
   </main>
 
