--- a/tarifs.html
+++ b/tarifs.html
@@ -1265,19 +1265,19 @@
           <div class="payments-title">Paiements via</div>
           <div class="payments-logos">
             <div class="payment-item">
-              <img src="mcb.svg" alt="MCB">
+              <img src="mcb.png" alt="MCB">
               <span>Virement bancaire</span>
             </div>
             <div class="payment-item">
-              <img src="juice.svg" alt="Juice">
+              <img src="juice.png" alt="Juice">
               <span>App Juice</span>
             </div>
             <div class="payment-item">
-              <img src="money.svg" alt="my.t money">
+              <img src="money.png" alt="my.t money">
               <span>App My.t Money</span>
             </div>
             <div class="payment-item">
-              <img src="stripe.svg" alt="Stripe">
+              <img src="stripe.png" alt="Stripe">
               <span>Carte bancaire</span>
             </div>
           </div>
