--- a/tarifs.html
+++ b/tarifs.html
@@ -935,22 +935,25 @@
     .payments-section{
       margin-top: 34px;
       background: #f3f3f3;
-      border-radius: 16px;
-      padding: 20px 26px;
+      border-radius: 18px;
+      padding: 32px 36px;
       text-align: center;
+      max-width: 1100px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .payments-title{
-      font-size: 13px;
-      color: #6b7280;
+      font-size: 14px;
+      color: #7a7a7a;
       font-weight: 600;
-      margin-bottom: 14px;
+      margin-bottom: 24px;
     }
 
     .payments-logos{
       display: grid;
-      grid-template-columns: repeat(4, minmax(120px, 1fr));
-      gap: 16px;
+      grid-template-columns: repeat(4, minmax(140px, 1fr));
+      gap: 28px;
       align-items: center;
       justify-items: center;
     }
@@ -959,18 +962,17 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 8px;
+      gap: 10px;
       color: #6b7280;
-      font-size: 11px;
+      font-size: 12px;
       font-weight: 600;
+      line-height: 1.3;
     }
 
     .payment-item img{
-      height: 32px;
-      max-width: 110px;
+      height: 48px;
+      max-width: 140px;
       object-fit: contain;
-      filter: grayscale(1);
-      opacity: .9;
     }
 
     @media (max-width: 1100px){
@@ -1004,7 +1006,7 @@
 
     @media (max-width: 900px){
       .payments-logos{
-        grid-template-columns: repeat(2, minmax(120px, 1fr));
+        grid-template-columns: repeat(2, minmax(140px, 1fr));
       }
     }
 
@@ -1265,19 +1267,19 @@
           <div class="payments-title">Paiements via</div>
           <div class="payments-logos">
             <div class="payment-item">
-              <img src="mcb.png" alt="MCB">
+              <img src="mcb.svg" alt="MCB">
               <span>Virement bancaire</span>
             </div>
             <div class="payment-item">
-              <img src="juice.png" alt="Juice">
+              <img src="juice.svg" alt="MCB Juice">
               <span>App Juice</span>
             </div>
             <div class="payment-item">
-              <img src="money.png" alt="my.t money">
+              <img src="money.svg" alt="My.t Money">
               <span>App My.t Money</span>
             </div>
             <div class="payment-item">
-              <img src="stripe.png" alt="Stripe">
+              <img src="stripe.svg" alt="Stripe">
               <span>Carte bancaire</span>
             </div>
           </div>
