--- a/tarifs.html
+++ b/tarifs.html
@@ -765,7 +765,7 @@
     }
 
     .comparison-table{
-      margin-top: 32px;
+      margin-top: 60px;
     }
 
     .comparison-grid{
@@ -777,8 +777,8 @@
 
     .comparison-grid th,
     .comparison-grid td{
-      padding: 10px 14px;
-      text-align: center;
+    padding: 10px 22px;
+    text-align: left;
       vertical-align: middle;
     }
 
@@ -938,7 +938,7 @@
     .plan-chip--scale{background: #2f7de1;}
 
     .payments-section{
-      margin-top: 34px;
+      margin-top: 54px;
       background: #f3f3f3;
       border-radius: 18px;
       padding: 32px 36px;
