--- a/tarifs.html
+++ b/tarifs.html
@@ -769,7 +769,9 @@
     }
 
     .comparison-grid{
-      width: 100%;
+      width: calc(100% + 40px);
+margin-left: -20px;
+margin-right: -20px;
       border-collapse: separate;
       border-spacing: 20px 0;
       table-layout: fixed;
