--- a/tarifs.html
+++ b/tarifs.html
@@ -1170,12 +1170,12 @@ margin-right: -20px;
           <h1>Plus que de la simple facturation</h1>
           <p>Prix clairs, fonctionnalités claires.</p>
           <div class="billing-toggle">
-            <span>Monthly</span>
+            <span>Mensuel</span>
             <label class="toggle-switch" aria-label="Basculer entre annuel et mensuel">
               <input id="billing-toggle" type="checkbox" checked>
               <span class="toggle-slider"></span>
             </label>
-            <span>Annual</span>
+            <span>Annuel</span>
           </div>
         </div>
 
