Center comparison plan cells

--- a/tarifs.html
+++ b/tarifs.html
@@ -821,6 +821,11 @@ margin-right: -20px;
       color: #0f172a;
     }
 
+    .comparison-grid th.comparison-plan,
+    .comparison-grid td.comparison-plan{
+      text-align: center;
+    }
+
     .comparison-plan--free{
       --plan-border: #f6c342;
     }
