--- a/index.html
+++ b/index.html
@@ -2352,9 +2352,9 @@
     <div class="pricing-grid">
       <article class="pricing-card pricing-card--rempart">
         <div class="pricing-card__icon" style="background-color: #ffd256;">
-          <img src="1.svg" alt="Départ">
+          <img src="1.svg" alt="Start">
         </div>
-        <h3>Départ<span class="pricing-card__tag"></span></h3>
+        <h3>Start<span class="pricing-card__tag"></span></h3>
         <div class="pricing-card__price">
           <span class="pricing-card__amount">Gratuit</span>
         </div>
@@ -2375,9 +2375,9 @@
 
       <article class="pricing-card pricing-card--pieter pricing-card--featured">
         <div class="pricing-card__icon" style="background-color: #22c55e;">
-          <img src="2.svg" alt="Croissance">
+          <img src="2.svg" alt="Grow">
         </div>
-        <h3>Croissance<span class="pricing-card__tag"></span></h3>
+        <h3>Grow<span class="pricing-card__tag"></span></h3>
         <div class="pricing-card__price">
           <div class="pricing-card__line">
             <span class="pricing-card__amount" data-monthly="Rs 499" data-annual="Rs 4990">Rs 499</span>
@@ -2401,9 +2401,9 @@
 
       <article class="pricing-card pricing-card--morne">
         <div class="pricing-card__icon" style="background-color: #10a5e9;">
-          <img src="3.svg" alt="Expansion">
+          <img src="3.svg" alt="Scale">
         </div>
-        <h3>Expansion<span class="pricing-card__tag"></span></h3>
+        <h3>Scale<span class="pricing-card__tag"></span></h3>
         <div class="pricing-card__price">
           <div class="pricing-card__line">
             <span class="pricing-card__amount" data-monthly="Rs 999" data-annual="Rs 9990">Rs 999</span>
