Standardize footers across pages

--- a/conditions-generales-utilisation.html
+++ b/conditions-generales-utilisation.html
@@ -1864,7 +1864,7 @@
 
   <div class="footer-bottom">
     <div class="container footer-bottom-inner">
-      <span>© Facture.mu - Tous droits réservés.</span>
+      <span>© Facture.mu - Tous droits réservés. @2026</span>
       <span>Mentions légales &nbsp;-&nbsp; CGV &nbsp;-&nbsp; Cookies</span>
     </div>
   </div>
