--- a/tarifs.html
+++ b/tarifs.html
@@ -1451,16 +1451,19 @@ margin-right: -20px;
 
   <footer class="site-footer">
     <div class="container footer-grid">
-      <div class="footer-brand">
+
+      <!-- LOGO -->
+    <div class="footer-brand">
         <img src="logo.png" alt="Facture.mu" class="footer-logo">
-        <p class="footer-tagline">El dorado de la facturation</p>
+        <p class="footer-tagline">Eldorado de la facturation</p>
       </div>
 
+      <!-- LINKS -->
       <div class="footer-links">
+
         <div class="footer-column">
           <h4>Produit</h4>
-          <a href="index.html#fonctionnalites">Fonctionnalités</a>
-          <a href="index.html#intro">Comment ça marche</a>
+          <a href="#fonctionnalites">Fonctionnalités</a>
           <a href="tarifs.html">Tarifs</a>
         </div>
 
@@ -1472,17 +1475,18 @@ margin-right: -20px;
         </div>
 
         <div class="footer-column">
-          <h4>Support</h4>
-          <a href="index.html#faq">FAQ</a>
+          <h4>Assistance</h4>
+          <a href="#faq">FAQ</a>
           <a href="#">Centre d’aide</a>
           <a href="#">État du système</a>
         </div>
+
       </div>
     </div>
 
     <div class="footer-bottom">
       <div class="container footer-bottom-inner">
-        <span>© Facture.mu - Tous droits réservés.</span>
+        <span>© Facture.mu - Tous droits réservés. @2026</span>
         <span>Mentions légales &nbsp;-&nbsp; CGV &nbsp;-&nbsp; Cookies</span>
       </div>
     </div>
