Adjust comparison plan header colors

--- a/tarifs.html
+++ b/tarifs.html
@@ -862,6 +862,18 @@ margin-right: -20px;
       border-top-width: 2px;
     }
 
+    .comparison-grid thead .comparison-plan--free{
+      color: #e11d48;
+    }
+
+    .comparison-grid thead .comparison-plan--pro{
+      color: #facc15;
+    }
+
+    .comparison-grid thead .comparison-plan--enterprise{
+      color: #ffffff;
+    }
+
     .comparison-grid td.comparison-feature{
       text-align: left;
       font-size: 12px;
