Set monthly pricing as default

--- a/tarifs.html
+++ b/tarifs.html
@@ -1197,7 +1197,7 @@ margin-right: -20px;
           <div class="billing-toggle">
             <span>Mensuel</span>
             <label class="toggle-switch" aria-label="Basculer entre annuel et mensuel">
-              <input id="billing-toggle" type="checkbox" checked>
+              <input id="billing-toggle" type="checkbox">
               <span class="toggle-slider"></span>
             </label>
             <span>Annuel</span>
